tests/11-bits-attribute-wrong.stderr
error[E0308]: mismatched types
  --> tests/11-bits-attribute-wrong.rs:9:1
   |
9  | #[bitfield]
   | ^^^^^^^^^^^
   | |
   | expected an array with a size of 9, found one with a size of 1
   | expected due to this
10 | pub struct RedirectionTableEntry {
11 |     #[bits = 9]
   |              - help: consider specifying the actual array length: `1`
   |
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
